MB-42272: Refactor MagmaKVStore::getCollectionStats

Refactor MagmaKVStore::getCollectionStats to be implemented in terms
of a Vbid and key (magma::Slice) so that we can re-use the code to
read stats for dropped collections (stored under a different key)

Change-Id: Ifdb5c1fa8e981f18ce917c5b6c09441c42aa881a
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/152390
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>